Adds descriptions for enums

--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -1,68 +1,103 @@
 ProcessType:
   description: The means by which a technique is delivered
   options:
-    - FullyAutomated
-    - PartiallyAutomated
-    - Manual
-    - NotRequired
+    - value: FullyAutomated
+      description: FullyAutomated description placeholder
+    - value: PartiallyAutomated
+      description: PartiallyAutomated description placeholder
+    - value: Manual
+      description: Manual description placeholder
+    - value: NotRequired
+      description:  NotRequired description placeholder
 FailoverArchitectureType:
   description: The design which allows failover
   options:
-    - ActiveActive
-    - ActivePassive
-    - None
+    - value: ActiveActive
+      description: ActiveActive description placeholder
+    - value: ActivePassive
+      description: ActivePassive description placeholder
+    - value: None
+      description: None description placeholder
 TrafficLight:
   description: Quality rating based on Red, Amber and Green.
   options:
-    - Red
-    - Amber
-    - Green
+    - value: Red
+      description: Red description placeholder
+    - value: Amber
+      description: Amber description placeholder
+    - value: Green
+      description: Green description placeholder
 SystemLifecycle:
   description: |
     The lifecycle stage of a system.
     Note that 'Deprecated' should be used for systems that are currently
     not actively used, but may not be fully decommissioned yet
   options:
-    - Preproduction
-    - Production
-    - Deprecated
-    - Decommissioned
+    - value: Preproduction
+      description: Preproduction description placeholder
+    - value: Production
+      description: Production description placeholder
+    - value: Deprecated
+      description: Deprecated description placeholder
+    - value: Decommissioned
+      description: Decommissioned description placeholder
 ServiceTier:
   description: A system's support level
   options:
-    - Unsupported
-    - Bronze
-    - Silver
-    - Gold
-    - Platinum
+    - value: Unsupported
+      description: Unsupported description placeholder
+    - value: Bronze
+      description: Bronze description placeholder
+    - value: Silver
+      description: Silver description placeholder
+    - value: Gold
+      description: Gold description placeholder
+    - value: Platinum
+      description: Platinum description placeholder
 ProductLifecycle:
   description: The lifecycle stage of a product
   options:
-    - Incubate
-    - Sustain
-    - Grow
-    - Sunset
+    - value: Incubate
+      description: Incubate description placeholder
+    - value: Sustain
+      description: Sustain description placeholder
+    - value: Grow
+      description: Grow description placeholder
+    - value: Sunset
+      description: Sunset description placeholder
 PersonSource:
   description: The main origin of information about a Person
   options:
-    - workday
-    - multi
-    - cmdb3
-    - slack
-    - salesforce
-    - github
-    - ldap
+    - value: workday
+      description: workday description placeholder
+    - value: multi
+      description: multi description placeholder
+    - value: cmdb3
+      description: cmdb3 description placeholder
+    - value: slack
+      description: slack description placeholder
+    - value: salesforce
+      description: salesforce description placeholder
+    - value: github
+      description: github description placeholder
+    - value: ldap
+      description: ldap description placeholder
 PersonContract:
   description: Types of employment contract a Person may have with the FT
   options:
-    - permanent
-    - contractor
-    - other
+    - value: permanent
+      description: permanent description placeholder
+    - value: contractor
+      description: contractor description placeholder
+    - value: other
+      description: other description placeholder
 VersionControlSystem:
   description: Version control system that can store source code repositories
   options:
-    - bitbucket
-    - github
+    - value: bitbucket
+      description: bitbucket description placeholder
+    - value: github
+      description: github description placeholder
 GDPRProcess:
   description: Type of process used for handling GDPR erasure and retention requests
   options:
@@ -73,7 +108,8 @@ GDPRProcess:
     # link which the individual can click to confirm the fact they have deleted
     # data. Weekly reminders will be sent until deletion has been confirmed.
     # ACE
-    - AutomaticChasingEmail
+    - value: AutomaticChasingEmail
+      description: AutomaticChasingEmail description placeholder
     # Deletion Table
     # This is a table of people who need to be deleted, either due to retention
     # policy or someone having submitted a request. It is maintained in Data
@@ -81,7 +117,8 @@ GDPRProcess:
     # downstream systems either consume a feed from the table or poll it and
     # delete any new records found since last accessed.
     # DT
-    - DeletionTable
+    - value: DeletionTable
+      description: DeletionTable description placeholder
     # Automatic routine
     # This means the system has an automatic purge routine in place which
     # deletes data older than a specified time. The time varies by system but
@@ -90,55 +127,69 @@ GDPRProcess:
     # requirement to do anything else to implement retention policy and system
     # owners dont need to be notified of erasure requests.
     # Auto
-    - ScheduledPurge
+    - value: ScheduledPurge
+      description: ScheduledPurge description placeholder
     # Manual
     # This means there is no automated routine in place for deletions. For
     # erasure requests, these system owners will receive an ACE message, but
     # for retention, they will need to set a manual trigger and delete data
     # periodically to remain compliant.
-    - Manual
+    - value: Manual
+      description: Manual description placeholder
     # Application Programming Interface
     # Some systems have APIs which are called directly by the Hub. These are
     # called for erasure requests only as retention is not (currently) managed
     # in the Hub.
-    - API
+    - value: API
+      description: API description placeholder
     # Multiple
     # Some systems use a variety of the methods listed above, depending on the
     # types of data they hold. This is only really true for systems holding a
     # large amount of data, e.g. Redshift.
-    - Multiple
+    - value: Multiple
+      description: Multiple description placeholder
     # N/A
     # Some systems are considered too complex to complete erasure/ retention on,
     # so it was decided to not implement standard policy on these systems. The
     # risks of this have (or should have) been agreed by the FT Legal and
     # Compliance teams, but they are marked as n/a here.
     # N/A
-    - NotApplicable
+    - value: NotApplicable
+      description: NotApplicable description placeholder
     # # TBD
     # # Work is still ongoing to define delete methods for a small number of systems.
     # - TBD
 CookieParty:
   description: Cookie party classification type
   options:
-    - FirstParty
-    - ThirdParty
+    - value: FirstParty
+      description: FirstParty description placeholder
+    - value: ThirdParty
+      description: ThirdParty description placeholder
 CookiePurpose:
   description: ICC cookie classification type
   options:
-    - StrictlyNecessary
-    - Performance
-    - Functionality
-    - TargetingOrAdvertising
+    - value: StrictlyNecessary
+      description: StrictlyNecessary description placeholder
+    - value: Performance
+      description: Performance description placeholder
+    - value: Functionality
+      description: Functionality description placeholder
+    - value: TargetingOrAdvertising
+      description: TargetingOrAdvertising description placeholder
 CookieExpiry:
   description: Cookie expiry type
   options:
-    - Session
-    - Persistent
+    - value: Session
+      description: Session description placeholder
+    - value: Persistent
+      description: Persistent description placeholder
 CapabilityTier:
   description: Level of importance of a business capability
   options:
-    - BrandCritical
-    - BusinessCritical
-    - NotCritical
-
-
+    - value: BrandCritical
+      description: BrandCritical description placeholder
+    - value: BusinessCritical
+      description: BusinessCritical description placeholder
+    - value: NotCritical
+      description: NotCritical description placeholder
