Tidy Person model a little

--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -97,10 +97,11 @@ properties:
     fieldset: general
   isPeopleApi:
     type: Boolean
-    label: Is in people api
+    label: Is FT staff
+    fieldset: general
     description: |
-        Whether or not this person exists in https://who.in.ft.com.
-        For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
+        Whether or not this person is an FT staff member listed in https://people-finder.in.ft.com/.
+        Please raise in the \#ip-people-api slack channel if details are incorrect.
     autoPopulated: true
   source:
     type: PersonSource
@@ -110,6 +111,7 @@ properties:
   proposedId:
     type: Word
     label: Proposed ID
+    deprecationReason: Only needed during migration to new ids
     description: The ID of this person in Workday, ldap, github or Slack. If no ID is found, it is `name.lastname`.
     autoPopulated: true
   techDirectorFor:
