--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -8,9 +8,16 @@ ProcessType:
 FailoverArchitectureType:
   description: The design which allows failover
   options:
-    - ActiveActive
-    - ActivePassive
-    - None
+    ActiveActive: |
+      The service is running and serving traffic in both regions at all times.
+      Failover is accomplished by turning off the unhealthy region and all traffic
+      is routed to the remaining region.
+    ActivePassive: |
+      The service is running and serving traffic in the primary region, and may
+      be running, or can be started quickly, in the secondary region.
+      Failover is accomplished by routing all traffic to the secondary region.
+    None: |
+      No failover process defined
 TrafficLight:
   description: Quality rating based on Red, Amber and Green.
   options:
@@ -23,10 +30,15 @@ SystemLifecycle:
     Note that 'Deprecated' should be used for systems that are currently
     not actively used, but may not be fully decommissioned yet
   options:
-    - Preproduction
-    - Production
-    - Deprecated
-    - Decommissioned
+    Preproduction: |
+      Any stage in a system's life before production, from planning through to
+      running in a production environment, but not yet deemed reliable
+    Production: |
+      The system is in a state where its consumers can rely on it to fulfil their needs
+    Deprecated: |
+      The system
+    Decommissioned: |
+      asdksahdk
 ServiceTier:
   description: A system's support level
   options:
@@ -64,59 +76,27 @@ VersionControlSystem:
     - bitbucket
     - github
 GDPRProcess:
-  description: Type of process used for handling GDPR erasure and retention requests
+  description: A process used for handling GDPR erasure and retention requests
   options:
-    # Automatic Chasing Email
-    # This is an auto-generated email sent from the GDPR Hub to System Owners,
-    # instructing them to erasure data for an individual. System owners who need
-    # to do deletions manually will receive this message. The email contains a
-    # link which the individual can click to confirm the fact they have deleted
-    # data. Weekly reminders will be sent until deletion has been confirmed.
-    # ACE
-    - AutomaticChasingEmail
-    # Deletion Table
-    # This is a table of people who need to be deleted, either due to retention
-    # policy or someone having submitted a request. It is maintained in Data
-    # Platform and populated when they are deleted in Membership. Some
-    # downstream systems either consume a feed from the table or poll it and
-    # delete any new records found since last accessed.
-    # DT
-    - DeletionTable
-    # Automatic routine
-    # This means the system has an automatic purge routine in place which
-    # deletes data older than a specified time. The time varies by system but
-    # should not be longer than 30 days as this is the length of time we have
-    # to fulfil a deletion request. With auto delete routines there is no
-    # requirement to do anything else to implement retention policy and system
-    # owners dont need to be notified of erasure requests.
-    # Auto
-    - ScheduledPurge
-    # Manual
-    # This means there is no automated routine in place for deletions. For
-    # erasure requests, these system owners will receive an ACE message, but
-    # for retention, they will need to set a manual trigger and delete data
-    # periodically to remain compliant.
-    - Manual
-    # Application Programming Interface
-    # Some systems have APIs which are called directly by the Hub. These are
-    # called for erasure requests only as retention is not (currently) managed
-    # in the Hub.
-    - API
-    # Multiple
-    # Some systems use a variety of the methods listed above, depending on the
-    # types of data they hold. This is only really true for systems holding a
-    # large amount of data, e.g. Redshift.
-    - Multiple
-    # N/A
-    # Some systems are considered too complex to complete erasure/ retention on,
-    # so it was decided to not implement standard policy on these systems. The
-    # risks of this have (or should have) been agreed by the FT Legal and
-    # Compliance teams, but they are marked as n/a here.
-    # N/A
-    - NotApplicable
-    # # TBD
-    # # Work is still ongoing to define delete methods for a small number of systems.
-    # - TBD
+    AutomaticChasingEmail: |
+      Auto-generated emails sent from the GDPR Hub to System Owners,
+      instructing them to erase data for an individual.
+    DeletionTable: |
+      Automatically reacts to entries in a table of people who need to be deleted,
+      maintained by the Data Platform and populated when they are deleted in Membership.
+    ScheduledPurge: |
+      The system has a routine in place which deletes data older than a specified time.
+      The time varies by system but should not be longer than 30 days.
+    API: |
+      System has a delete APIs which is called directly by the GDPR Hub.
+    Manual: |
+      No automated routine in place for deletions.
+    Multiple: |
+      Uses a variety of the methods listed above.
+    NotApplicable: |
+      System is considered too complex to complete erasure/retention on.
+      The risks _must_ be agreed by the FT Legal and Compliance teams.
+
 CookieParty:
   description: Cookie party classification type
   options:
