--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -30,30 +30,45 @@ SystemLifecycle:
     Note that 'Deprecated' should be used for systems that are currently
     not actively used, but may not be fully decommissioned yet
   options:
-    Preproduction: |
-      Any stage in a system's life before production, from planning through to
-      running in a production environment, but not yet deemed reliable
-    Production: |
-      The system is in a state where its consumers can rely on it to fulfil their needs
-    Deprecated: |
-      The system
-    Decommissioned: |
-      asdksahdk
+    - Preproduction
+    - Production
+    - Deprecated
+    - Decommissioned
 ServiceTier:
   description: A system's support level
   options:
-    - Unsupported
-    - Bronze
-    - Silver
-    - Gold
-    - Platinum
+    Unsupported:
+      No availability target, no formal support
+    Bronze:
+      No availability target, office hours support
+    Silver:
+      99.5% availability, office hours support
+    Gold:
+      99.7% availability, 24/7 support
+    Platinum:
+      99.9% availability, 24/7 support, runs in at least 2 regions
 ProductLifecycle:
   description: The lifecycle stage of a product
   options:
-    - Incubate
-    - Sustain
-    - Grow
-    - Sunset
+    Incubate: |
+      Low investment.
+      Experimental with high failure rate.
+      Prioritise quick learning over fidelity and quality
+      Strategically aligned; financial ROI not expected
+    Grow: |
+      Medium to low investment.
+      Working known lines of inquiry for modest KPI gains
+      Stable quality & SLA
+    Sustain: |
+      High investment.
+      Experimentation combined with scaling and SLAs
+      Rising quality
+      Metrics moving more than 10%
+      Accountable for ROI
+    Sunset: |
+      Low investment
+      No new features
+      Decommissioning begins
 PersonSource:
   description: The main origin of information about a Person
   options:
@@ -105,10 +120,35 @@ CookieParty:
 CookiePurpose:
   description: ICC cookie classification type
   options:
-    - StrictlyNecessary
-    - Performance
-    - Functionality
-    - TargetingOrAdvertising
+    StrictlyNecessary: |
+      These cookies are essential in order to enable you to move around the website
+      and use its features, such as accessing secure areas of the website. Without
+      these cookies services you have asked for, like shopping baskets or e-billing,
+      cannot be provided.
+    Performance: |
+      These cookies collect information about how visitors use a website, for instance
+      which pages visitors go to most often, and if they get error messages from web pages.
+      These cookies don’t collect information that identifies a visitor. All information
+      these cookies collect is aggregated and therefore anonymous. It is only used to
+      improve how a website works.
+    Functionality: |
+      These cookies allow the website to remember choices you make (such as your user
+      name, language or the region you are in) and provide enhanced, more personal
+      features. For instance, a website may be able to provide you with local weather
+      reports or traffic news by storing in a cookie the region in which you are
+      currently located. These cookies can also be used to remember changes you have
+      made to text size, fonts and other parts of web pages that you can customise.
+      They may also be used to provide services you have asked for such as watching
+      a video or commenting on a blog. The information these cookies collect may be
+      anonymised and they cannot track your browsing activity on other websites.
+    TargetingOrAdvertising: |
+      These cookies are used to deliver adverts more relevant to you and your interests
+      They are also used to limit the number of times you see an advertisement as well
+      as help measure the effectiveness of the advertising campaign. They are usually
+      placed by advertising networks with the website operator’s permission. They remember
+      that you have visited a website and this information is shared with other organisations
+      such as advertisers. Quite often targeting or advertising cookies will be linked
+      to site functionality provided by the other organisation.
 CookieExpiry:
   description: Cookie expiry type
   options:
@@ -117,6 +157,14 @@ CookieExpiry:
 CapabilityTier:
   description: Level of importance of a business capability
   options:
-    - BrandCritical
-    - BusinessCritical
-    - NotCritical
+    BrandCritical: |
+      Failure to be able to execute this capability risks long-term damage to the FT
+      e.g. publishing content to ft.com
+    BusinessCritical: |
+      Failure to be able to execute this capability risks significant short-term damage
+      to the FT and its sources of revenue which are difficult to rectify, even after
+      the capability has been restored e.g. processing subscriptions
+    NotCritical: |
+      Failure to be able to execute this capability, although harmful to the FT, can
+      be managed, and any damage is temporary and generally possible to rectify after the
+      capability has been recovered e.g. producing a monthly financial report
