--- a/schema/types/Repository.yaml
+++ b/schema/types/Repository.yaml
@@ -1,6 +1,8 @@
 name: Repository
 pluralName: Repositories
-description: A source code repository
+description: |
+  A source code repository. Should generally not be manually created as we have a 
+  cron job that regularly syncs from github and bitbucket to Biz Ops
 rank: 27
 properties:
   code:
