clarify what decom means for SaaS
@lucas42 	better?

--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -34,7 +34,8 @@ SystemLifecycle:
     Discontinued: |
       No longer functional. Attempts to interact with the system will be unsuccessful.
     Decommissioned: |
-      All parts of the system have been removed from all the environments it ran in.
+      For a self hosted/installed system, all its parts have been removed from all the environments it ran in.
+      For SaaS, our relationship with the supplier is terminated, and we no longer pay for or use the system.
 ServiceTier:
   description: A system's support level
   options:
