support restricting creation of records

--- a/schema/types/Repository.yaml
+++ b/schema/types/Repository.yaml
@@ -1,9 +1,11 @@
 name: Repository
 pluralName: Repositories
 description: |
-  A source code repository. Should generally not be manually created as we have a 
+  A source code repository. Should generally not be manually created as we have a
   cron job that regularly syncs from github and bitbucket to Biz Ops
 rank: 27
+createPermissions:
+  - biz-ops-github-importer
 properties:
   code:
     type: Code
