remove autopopulate and document create restriction

--- a/schema/types/Cookie.yaml
+++ b/schema/types/Cookie.yaml
@@ -1,6 +1,8 @@
 name: Cookie
 description: A small packet of information sent by a web host to your computer when you visit a website.
 rank: 100
+createPermissions:
+  - ip-cookie-audit
 properties:
   code:
     type: Code
@@ -11,7 +13,6 @@ properties:
     unique: true
     pattern: MAX_LENGTH_64
     fieldset: main
-    autoPopulated: true
 
   name:
     type: Name
