--- a/schema/types/CookieInstance.yaml
+++ b/schema/types/CookieInstance.yaml
@@ -1,7 +1,8 @@
 name: CookieInstance
 description: |
   A node with cookie relationship data specific to a cookie attached to a domain/product website. Data includes cookie path and last seen date.
-
+createPermissions:
+  - ip-cookie-audit
 rank: 100
 properties:
   code:
@@ -13,7 +14,6 @@ properties:
     unique: true
     pattern: MAX_LENGTH_64
     fieldset: main
-    autoPopulated: true
 
   path:
     type: Word
