--- a/schema/types/DataType.yaml
+++ b/schema/types/DataType.yaml
@@ -5,7 +5,7 @@ properties:
     code:
         type: Code
         label: Code
-        description: The unique code for this data type
+        description: The unique code for this data type. This should be the type's name hyphenated in lower case, e.g. iso3-country-code.
     name:
         type: String
         label: Name
@@ -13,33 +13,38 @@ properties:
     description:
         type: String
         label: Description
-        description: |
-            A description of what this data item stores. Please be specific - i.e. say that it's a six-digit SIC classification not just that it's an industry code.
+        description: A description of what this data item stores. Please be specific - i.e. say that it's a six-digit SIC classification not just that it's an industry code.
     isInstanceOf:
         type: DataAttribute
         relationship: IS_INSTANCE_OF
         direction: incoming
         hasMany: true
-
+        label: InstancesOf
+        description: Things that are of this type. Only here because BizOps doesn't allow unidirectional links.
     isKnownAboutBy:
         type: Person
         relationship: KNOWS_ABOUT
         direction: incoming
         hasMany: true
-
+        label: IsKnownAboutBy
+        description: People who know about this data type, what the values means and how it's used.
     isPurchasedBy:
         type: Team
         relationship: IS_PURCHASED_BY
         direction: outgoing
-
+        label: PurchasedBy
+        description: People involved in purchasing the underlying data that supports this type, if something has to be bought. For example Factset used to support people in Content.
     valuesGovernedBy:
         type: Team
         relationship: VALUES_GOVERNED_BY
         direaction: outgoing
+        label: ValuesGovernedBy
+        description: The team responsible for deciding what acceptable values for this type are, and for keeping that range of values up-to-date.
 
-    broader:
         type: DataType
         relationship: BROADER
         direction: incoming
+        label: Broader
+        description: A wider version of the same type, for example country is a wider version of ISO-3 country.
     
     
